--- a/index.html
+++ b/index.html
@@ -1,66 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Proof of Impact Protocol</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Proof of Impact Protocol (PoIP)</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f4f6f9;
-      margin: 0;
-      padding: 20px;
+      background-color: #f5f7fa;
       text-align: center;
-      color: #333;
+      padding: 40px;
     }
     h1 {
-      font-size: 2.2em;
-      margin-bottom: 10px;
       color: #2c3e50;
+      font-size: 32px;
     }
-    p.description {
-      font-size: 1em;
-      margin-bottom: 30px;
-      color: #555;
+    p {
+      color: #444;
+      font-size: 16px;
+      margin-bottom: 40px;
       max-width: 600px;
       margin-left: auto;
       margin-right: auto;
     }
     .button {
-      display: inline-block;
+      display: block;
+      width: 280px;
+      margin: 10px auto;
+      padding: 12px;
       background-color: #007bff;
       color: white;
-      padding: 12px 20px;
-      margin: 10px;
       text-decoration: none;
       border-radius: 6px;
-      font-weight: bold;
-      transition: background-color 0.3s;
+      font-size: 16px;
     }
-    .button:hover {
-      background-color: #0056b3;
-    }
-    footer {
-      margin-top: 40px;
-      font-size: 0.9em;
+    .footer {
+      margin-top: 60px;
+      font-size: 14px;
       color: #888;
     }
   </style>
 </head>
 <body>
+
   <h1>Proof of Impact Protocol</h1>
-  <p class="description">
-    The Proof of Impact Protocol (PoIP) is a decentralized framework for funding verified global impact using a dual-yield treasury, symbolic staking rewards, and AI-managed coordination. 
-    It is open-source, transparent, and aligned with real-world good.
+  <p>
+    A decentralised system that connects pooled staking, treasury yield, and automated impact funding — empowering real-world solutions through transparent rewards and on-chain verification.
   </p>
 
-  <a class="button" href="whitepaper.html">View Whitepaper</a>
-  <a class="button" href="stake.html">Stake Simulation</a>
-  <a class="button" href="yield.html">Treasury Yield Tool</a>
-  <a class="button" href="grow.html">Reward ($GROW) Page</a>
+  <a href="whitepaper.html" class="button">View Whitepaper</a>
+  <a href="stake.html" class="button">Stake Simulation</a>
+  <a href="yield.html" class="button">Treasury Yield Tool</a>
+  <a href="grow.html" class="button">Reward ($GROW) Page</a>
 
-  <footer>
-    Licensed under GNU General Public License v3.0 (GPL-3.0)
-  </footer>
+  <div class="footer">
+    Licensed under GNU GPL v3.0 — Open Source for Public Good
+  </div>
+
 </body>
 </html>
