--- a/presentation.html
+++ b/presentation.html
@@ -60,7 +60,7 @@
 
     <h2>Partner With Us</h2>
     <p>We invite NGOs, DAOs, and funders to join the mission. Help us scale verifiable global aid and innovation.</p>
-    <a class="button" href="mailto:youremail@example.com">Contact for Collaboration</a>
+    <a class="button" href="mailto:proofofimpactprotocol@gmail.com">Contact for Collaboration</a>
   </div>
 </body>
 </html>
