--- a/presentation.html
+++ b/presentation.html
@@ -24,6 +24,11 @@
     h1 {
       color: #1a73e8;
     }
+    h3 {
+      color: #444;
+      font-weight: normal;
+      margin-top: -10px;
+    }
     .button {
       display: inline-block;
       margin: 10px;
@@ -42,13 +47,8 @@
 <body>
   <div class="container">
     <h1>Proof of Impact Protocol (PoIP)</h1>
-    <p><strong>A decentralized engine to fund real-world impact through transparent crypto staking.</strong></p>
-
-    <!-- Optional Banner Image -->
-    <!-- <img class="banner" src="https://example.com/banner.png" alt="PoIP Banner Image" /> -->
-
-    <h2>How It Works</h2>
-    <p>Users stake tokens into a pooled treasury. The treasury generates yield. AI selects real-world bounties. Yield funds the bounties. Stakers get symbolic $GROW tokens as proof of their impact.</p>
+    <h3><em>Powered by blockchain. Automated by AI. Built for humanity.</em></h3>
+    <h3><em>A trustless system for funding real-world impact — transparently, verifiably, and at scale.</em></h3>
 
     <h2>Explore the Simulation</h2>
     <a class="button" href="index.html">PoIP Homepage</a>
@@ -61,6 +61,9 @@
     <h2>Partner With Us</h2>
     <p>We invite NGOs, DAOs, and funders to join the mission. Help us scale verifiable global aid and innovation.</p>
     <a class="button" href="mailto:proofofimpactprotocol@gmail.com">Contact for Collaboration</a>
+
+    <!-- Optional: Once live on Giveth, uncomment the line below -->
+    <!-- <a class="button" href="https://giveth.io/project/proof-of-impact-protocol">Support Us on Giveth</a> -->
   </div>
 </body>
 </html>
