--- a/presentation.html
+++ b/presentation.html
@@ -42,6 +42,21 @@
       margin: 20px auto;
       max-width: 100%;
     }
+    .support-section {
+      margin-top: 40px;
+      padding-top: 30px;
+      border-top: 1px solid #ccc;
+    }
+    .support-button {
+      display: inline-block;
+      margin-top: 10px;
+      padding: 14px 28px;
+      background: #ff007a;
+      color: white;
+      font-weight: bold;
+      text-decoration: none;
+      border-radius: 8px;
+    }
   </style>
 </head>
 <body>
@@ -49,6 +64,12 @@
     <h1>Proof of Impact Protocol (PoIP)</h1>
     <h3><em>Powered by blockchain. Automated by AI. Built for humanity.</em></h3>
     <h3><em>A trustless system for funding real-world impact — transparently, verifiably, and at scale.</em></h3>
+
+    <div class="support-section">
+      <h2>Support PoIP on Giveth</h2>
+      <p>We are now live on Giveth! You can support the growth of the Proof of Impact Protocol by donating directly through our official campaign page.</p>
+      <a class="support-button" href="https://giveth.io/project/proof-of-impact-protocol" target="_blank">Donate via Giveth</a>
+    </div>
 
     <h2>Explore the Simulation</h2>
     <a class="button" href="index.html">PoIP Homepage</a>
@@ -61,9 +82,6 @@
     <h2>Partner With Us</h2>
     <p>We invite NGOs, DAOs, and funders to join the mission. Help us scale verifiable global aid and innovation.</p>
     <a class="button" href="mailto:proofofimpactprotocol@gmail.com">Contact for Collaboration</a>
-
-    <!-- Optional: Once live on Giveth, uncomment the line below -->
-    <!-- <a class="button" href="https://giveth.io/project/proof-of-impact-protocol">Support Us on Giveth</a> -->
   </div>
 </body>
 </html>
