--- a/presentation.html
+++ b/presentation.html
@@ -57,6 +57,16 @@
       text-decoration: none;
       border-radius: 8px;
     }
+    .follow-button {
+      display: inline-block;
+      margin-top: 10px;
+      padding: 14px 28px;
+      background: #1da1f2;
+      color: white;
+      font-weight: bold;
+      text-decoration: none;
+      border-radius: 8px;
+    }
   </style>
 </head>
 <body>
@@ -69,6 +79,10 @@
       <h2>Support PoIP on Giveth</h2>
       <p>We are now live on Giveth! You can support the growth of the Proof of Impact Protocol by donating directly through our official campaign page.</p>
       <a class="support-button" href="https://giveth.io/project/proof-of-impact-protocol" target="_blank">Donate via Giveth</a>
+
+      <h2 style="margin-top: 40px;">Follow the Mission</h2>
+      <p>Stay updated and help amplify the movement on X:</p>
+      <a class="follow-button" href="https://x.com/proofofpoip" target="_blank">Follow PoIP on Twitter</a>
     </div>
 
     <h2>Explore the Simulation</h2>
