--- a/presentation.html
+++ b/presentation.html
@@ -38,10 +38,6 @@
       text-decoration: none;
       border-radius: 8px;
     }
-    .banner {
-      margin: 20px auto;
-      max-width: 100%;
-    }
     .support-section {
       margin-top: 40px;
       padding-top: 30px;
@@ -66,6 +62,24 @@
       font-weight: bold;
       text-decoration: none;
       border-radius: 8px;
+    }
+    .cta-box {
+      margin-top: 40px;
+      padding: 20px;
+      background: #f0f8ff;
+      border-radius: 10px;
+    }
+    ul.links-list {
+      list-style: none;
+      padding: 0;
+    }
+    ul.links-list li {
+      margin: 10px 0;
+    }
+    ul.links-list a {
+      color: #1a73e8;
+      font-weight: bold;
+      text-decoration: none;
     }
   </style>
 </head>
@@ -93,9 +107,22 @@
     <a class="button" href="Proof-of-impact/bounty-verify.html">Verify Bounty</a>
     <a class="button" href="https://docs.google.com/document/d/11KxHDERELrsdWhGTLcF7VTn0JAna-wwrc2I3F40DKiY">Read Whitepaper</a>
 
-    <h2>Partner With Us</h2>
-    <p>We invite NGOs, DAOs, and funders to join the mission. Help us scale verifiable global aid and innovation.</p>
-    <a class="button" href="mailto:proofofimpactprotocol@gmail.com">Contact for Collaboration</a>
+    <div class="cta-box">
+      <h2>Pitch-Ready Demo Links</h2>
+      <ul class="links-list">
+        <li><a href="https://poiarchitect.github.io/Proof-of-impact/stake.html" target="_blank">Stake Simulation</a></li>
+        <li><a href="https://poiarchitect.github.io/Proof-of-impact/yield.html" target="_blank">Treasury Yield Tool</a></li>
+        <li><a href="https://poiarchitect.github.io/Proof-of-impact/grow.html" target="_blank">$GROW Balance Page</a></li>
+        <li><a href="https://poiarchitect.github.io/Proof-of-impact/proof-001.html" target="_blank">Bounty Proof Example</a></li>
+        <li><a href="https://docs.google.com/document/d/11KxHDERELrsdWhGTLcF7VTn0JAna-wwrc2I3F40DKiY" target="_blank">Read Full Whitepaper</a></li>
+      </ul>
+    </div>
+
+    <div class="cta-box">
+      <h2>Partner With Us</h2>
+      <p>We invite NGOs, DAOs, and funders to join the mission. Help us scale verifiable global aid and innovation.</p>
+      <p><strong>Contact:</strong> <a href="mailto:proofofimpactprotocol@gmail.com">proofofimpactprotocol@gmail.com</a> or <a href="https://github.com/poiarchitect" target="_blank">View on GitHub</a></p>
+    </div>
   </div>
 </body>
 </html>
