--- a/presentation.html
+++ b/presentation.html
@@ -38,6 +38,10 @@
       text-decoration: none;
       border-radius: 8px;
     }
+    .banner {
+      margin: 20px auto;
+      max-width: 100%;
+    }
     .support-section {
       margin-top: 40px;
       padding-top: 30px;
@@ -63,15 +67,17 @@
       text-decoration: none;
       border-radius: 8px;
     }
-    .cta-box {
-      margin-top: 40px;
+    .section-box {
+      background: #e9f2ff;
       padding: 20px;
-      background: #f0f8ff;
       border-radius: 10px;
+      margin-top: 40px;
     }
     ul.links-list {
       list-style: none;
       padding: 0;
+      margin: 0 auto;
+      text-align: center;
     }
     ul.links-list li {
       margin: 10px 0;
@@ -99,29 +105,24 @@
       <a class="follow-button" href="https://x.com/proofofpoip" target="_blank">Follow PoIP on Twitter</a>
     </div>
 
-    <h2>Explore the Simulation</h2>
-    <a class="button" href="index.html">PoIP Homepage</a>
-    <a class="button" href="stake.html">Stake Simulation</a>
-    <a class="button" href="yield.html">Treasury Growth</a>
-    <a class="button" href="grow.html">$GROW Balance</a>
-    <a class="button" href="Proof-of-impact/bounty-verify.html">Verify Bounty</a>
-    <a class="button" href="https://docs.google.com/document/d/11KxHDERELrsdWhGTLcF7VTn0JAna-wwrc2I3F40DKiY">Read Whitepaper</a>
-
-    <div class="cta-box">
+    <div class="section-box">
       <h2>Pitch-Ready Demo Links</h2>
       <ul class="links-list">
-        <li><a href="https://poiarchitect.github.io/Proof-of-impact/stake.html" target="_blank">Stake Simulation</a></li>
-        <li><a href="https://poiarchitect.github.io/Proof-of-impact/yield.html" target="_blank">Treasury Yield Tool</a></li>
-        <li><a href="https://poiarchitect.github.io/Proof-of-impact/grow.html" target="_blank">$GROW Balance Page</a></li>
-        <li><a href="https://poiarchitect.github.io/Proof-of-impact/proof-001.html" target="_blank">Bounty Proof Example</a></li>
-        <li><a href="https://docs.google.com/document/d/11KxHDERELrsdWhGTLcF7VTn0JAna-wwrc2I3F40DKiY" target="_blank">Read Full Whitepaper</a></li>
+        <li><a href="stake.html">Stake Simulation</a></li>
+        <li><a href="yield.html">Treasury Yield Tool</a></li>
+        <li><a href="grow.html">$GROW Balance Page</a></li>
+        <li><a href="Proof-of-impact/bounty-verify.html">Bounty Proof Example</a></li>
+        <li><a href="https://docs.google.com/document/d/11KxHDERELrsdWhGTLcF7VTn0JAna-wwrc2I3F40DKiY">Read Full Whitepaper</a></li>
       </ul>
     </div>
 
-    <div class="cta-box">
+    <div class="section-box">
       <h2>Partner With Us</h2>
       <p>We invite NGOs, DAOs, and funders to join the mission. Help us scale verifiable global aid and innovation.</p>
-      <p><strong>Contact:</strong> <a href="mailto:proofofimpactprotocol@gmail.com">proofofimpactprotocol@gmail.com</a> or <a href="https://github.com/poiarchitect" target="_blank">View on GitHub</a></p>
+      <p><strong>Contact:</strong><br />
+        <a href="mailto:proofofimpactprotocol@gmail.com">proofofimpactprotocol@gmail.com</a><br />
+        or <a href="https://github.com/poiarchitect/Proof-of-impact" target="_blank">View on GitHub</a>
+      </p>
     </div>
   </div>
 </body>
