--- a/presentation.html
+++ b/presentation.html
@@ -38,14 +38,8 @@
       text-decoration: none;
       border-radius: 8px;
     }
-    .banner {
-      margin: 20px auto;
-      max-width: 100%;
-    }
-    .support-section {
+    .section {
       margin-top: 40px;
-      padding-top: 30px;
-      border-top: 1px solid #ccc;
     }
     .support-button {
       display: inline-block;
@@ -67,22 +61,13 @@
       text-decoration: none;
       border-radius: 8px;
     }
-    .section-box {
-      background: #e9f2ff;
+    .light-box {
+      background: #eaf2ff;
       padding: 20px;
       border-radius: 10px;
-      margin-top: 40px;
+      margin-top: 30px;
     }
-    ul.links-list {
-      list-style: none;
-      padding: 0;
-      margin: 0 auto;
-      text-align: center;
-    }
-    ul.links-list li {
-      margin: 10px 0;
-    }
-    ul.links-list a {
+    a {
       color: #1a73e8;
       font-weight: bold;
       text-decoration: none;
@@ -95,7 +80,7 @@
     <h3><em>Powered by blockchain. Automated by AI. Built for humanity.</em></h3>
     <h3><em>A trustless system for funding real-world impact — transparently, verifiably, and at scale.</em></h3>
 
-    <div class="support-section">
+    <div class="section">
       <h2>Support PoIP on Giveth</h2>
       <p>We are now live on Giveth! You can support the growth of the Proof of Impact Protocol by donating directly through our official campaign page.</p>
       <a class="support-button" href="https://giveth.io/project/proof-of-impact-protocol" target="_blank">Donate via Giveth</a>
@@ -105,24 +90,25 @@
       <a class="follow-button" href="https://x.com/proofofpoip" target="_blank">Follow PoIP on Twitter</a>
     </div>
 
-    <div class="section-box">
+    <div class="light-box">
       <h2>Pitch-Ready Demo Links</h2>
-      <ul class="links-list">
-        <li><a href="stake.html">Stake Simulation</a></li>
-        <li><a href="yield.html">Treasury Yield Tool</a></li>
-        <li><a href="grow.html">$GROW Balance Page</a></li>
-        <li><a href="Proof-of-impact/bounty-verify.html">Bounty Proof Example</a></li>
-        <li><a href="https://docs.google.com/document/d/11KxHDERELrsdWhGTLcF7VTn0JAna-wwrc2I3F40DKiY">Read Full Whitepaper</a></li>
-      </ul>
+      <p><a href="stake.html">Stake Simulation</a></p>
+      <p><a href="yield.html">Treasury Yield Tool</a></p>
+      <p><a href="grow.html">$GROW Balance Page</a></p>
+      <p><a href="proof-003.html">Bounty Proof Example</a></p>
+      <p><a href="https://docs.google.com/document/d/11KxHDERELrsdWhGTLcF7VTn0JAna-wwrc2I3F40DKiY" target="_blank">Read Full Whitepaper</a></p>
     </div>
 
-    <div class="section-box">
+    <div class="light-box">
       <h2>Partner With Us</h2>
       <p>We invite NGOs, DAOs, and funders to join the mission. Help us scale verifiable global aid and innovation.</p>
-      <p><strong>Contact:</strong><br />
-        <a href="mailto:proofofimpactprotocol@gmail.com">proofofimpactprotocol@gmail.com</a><br />
-        or <a href="https://github.com/poiarchitect/Proof-of-impact" target="_blank">View on GitHub</a>
-      </p>
+      <div style="text-align: center; margin-top: 10px;">
+        <strong>Contact:</strong>
+        <div style="margin-top: 10px;">
+          <a href="mailto:proofofimpactprotocol@gmail.com" style="display: block;">proofofimpactprotocol@gmail.com</a>
+          <a href="https://github.com/poiarchitect/Proof-of-impact" target="_blank" style="display: block;">View on GitHub</a>
+        </div>
+      </div>
     </div>
   </div>
 </body>
