--- a/presentation.html
+++ b/presentation.html
@@ -38,8 +38,10 @@
       text-decoration: none;
       border-radius: 8px;
     }
-    .section {
+    .support-section {
       margin-top: 40px;
+      padding-top: 30px;
+      border-top: 1px solid #ccc;
     }
     .support-button {
       display: inline-block;
@@ -65,12 +67,17 @@
       background: #eaf2ff;
       padding: 20px;
       border-radius: 10px;
-      margin-top: 30px;
+      margin-top: 40px;
     }
-    a {
+    .light-box h2 {
+      margin-bottom: 12px;
+      color: #2c3e50;
+    }
+    .light-box a {
       color: #1a73e8;
       font-weight: bold;
-      text-decoration: none;
+      display: block;
+      margin: 6px 0;
     }
   </style>
 </head>
@@ -80,7 +87,7 @@
     <h3><em>Powered by blockchain. Automated by AI. Built for humanity.</em></h3>
     <h3><em>A trustless system for funding real-world impact — transparently, verifiably, and at scale.</em></h3>
 
-    <div class="section">
+    <div class="support-section">
       <h2>Support PoIP on Giveth</h2>
       <p>We are now live on Giveth! You can support the growth of the Proof of Impact Protocol by donating directly through our official campaign page.</p>
       <a class="support-button" href="https://giveth.io/project/proof-of-impact-protocol" target="_blank">Donate via Giveth</a>
@@ -92,23 +99,21 @@
 
     <div class="light-box">
       <h2>Pitch-Ready Demo Links</h2>
-      <p><a href="stake.html">Stake Simulation</a></p>
-      <p><a href="yield.html">Treasury Yield Tool</a></p>
-      <p><a href="grow.html">$GROW Balance Page</a></p>
-      <p><a href="proof-003.html">Bounty Proof Example</a></p>
-      <p><a href="https://docs.google.com/document/d/11KxHDERELrsdWhGTLcF7VTn0JAna-wwrc2I3F40DKiY" target="_blank">Read Full Whitepaper</a></p>
+      <a href="stake.html">Stake Simulation</a>
+      <a href="yield.html">Treasury Yield Tool</a>
+      <a href="grow.html">$GROW Balance Page</a>
+      <a href="proof-003.html">Bounty Proof Example</a>
+      <a href="https://docs.google.com/document/d/11KxHDERELrsdWhGTLcF7VTn0JAna-wwrc2I3F40DKiY">Read Full Whitepaper</a>
     </div>
 
     <div class="light-box">
       <h2>Partner With Us</h2>
       <p>We invite NGOs, DAOs, and funders to join the mission. Help us scale verifiable global aid and innovation.</p>
-      <div style="text-align: center; margin-top: 10px;">
-        <strong>Contact:</strong>
-        <div style="margin-top: 10px;">
-          <a href="mailto:proofofimpactprotocol@gmail.com" style="display: block;">proofofimpactprotocol@gmail.com</a>
-          <a href="https://github.com/poiarchitect/Proof-of-impact" target="_blank" style="display: block;">View on GitHub</a>
-        </div>
-      </div>
+      <p><strong>Contact:</strong></p>
+      <p>
+        <a href="mailto:proofofimpactprotocol@gmail.com">proofofimpactprotocol@gmail.com</a>
+        <a href="https://github.com/poiarchitect/Proof-of-impact">View on GitHub</a>
+      </p>
     </div>
   </div>
 </body>
