--- a/presentation.html
+++ b/presentation.html
@@ -79,6 +79,16 @@
       display: block;
       margin: 6px 0;
     }
+    .email-button {
+      display: inline-block;
+      margin: 12px auto;
+      padding: 12px 24px;
+      background: #1a73e8;
+      color: white;
+      font-weight: bold;
+      text-decoration: none;
+      border-radius: 8px;
+    }
   </style>
 </head>
 <body>
@@ -110,10 +120,8 @@
       <h2>Partner With Us</h2>
       <p>We invite NGOs, DAOs, and funders to join the mission. Help us scale verifiable global aid and innovation.</p>
       <p><strong>Contact:</strong></p>
-      <p>
-        <a href="mailto:proofofimpactprotocol@gmail.com">proofofimpactprotocol@gmail.com</a>
-        <a href="https://github.com/poiarchitect/Proof-of-impact">View on GitHub</a>
-      </p>
+      <a class="email-button" href="mailto:proofofimpactprotocol@gmail.com">Email Us</a>
+      <a class="button" href="https://github.com/poiarchitect/Proof-of-impact" target="_blank">View on GitHub</a>
     </div>
   </div>
 </body>
