--- a/presentation.html
+++ b/presentation.html
@@ -29,7 +29,7 @@
       font-weight: normal;
       margin-top: -10px;
     }
-    .button {
+    .button, .email-button {
       display: inline-block;
       margin: 10px;
       padding: 12px 24px;
@@ -37,6 +37,7 @@
       color: white;
       text-decoration: none;
       border-radius: 8px;
+      font-weight: bold;
     }
     .support-section {
       margin-top: 40px;
@@ -65,29 +66,9 @@
     }
     .light-box {
       background: #eaf2ff;
-      padding: 20px;
-      border-radius: 10px;
-      margin-top: 40px;
-    }
-    .light-box h2 {
-      margin-bottom: 12px;
-      color: #2c3e50;
-    }
-    .light-box a {
-      color: #1a73e8;
-      font-weight: bold;
-      display: block;
-      margin: 6px 0;
-    }
-    .email-button {
-      display: inline-block;
-      margin: 12px auto;
-      padding: 12px 24px;
-      background: #1a73e8;
-      color: white;
-      font-weight: bold;
-      text-decoration: none;
-      border-radius: 8px;
+      padding: 30px;
+      border-radius: 12px;
+      margin-top: 30px;
     }
   </style>
 </head>
@@ -108,20 +89,20 @@
     </div>
 
     <div class="light-box">
-      <h2>Pitch-Ready Demo Links</h2>
-      <a href="stake.html">Stake Simulation</a>
-      <a href="yield.html">Treasury Yield Tool</a>
-      <a href="grow.html">$GROW Balance Page</a>
-      <a href="proof-003.html">Bounty Proof Example</a>
-      <a href="https://docs.google.com/document/d/11KxHDERELrsdWhGTLcF7VTn0JAna-wwrc2I3F40DKiY">Read Full Whitepaper</a>
+      <h2>Pitch-Ready<br>Demo Links</h2>
+      <a class="button" href="stake.html">Stake Simulation</a>
+      <a class="button" href="yield.html">Treasury Yield Tool</a>
+      <a class="button" href="grow.html">$GROW Balance Page</a>
+      <a class="button" href="proof-001.html">Bounty Proof Example</a>
+      <a class="button" href="https://docs.google.com/document/d/11KxHDERELrsdWhGTLcF7VTn0JAna-wwrc2I3F40DKiY" target="_blank">Read Full Whitepaper</a>
     </div>
 
     <div class="light-box">
       <h2>Partner With Us</h2>
       <p>We invite NGOs, DAOs, and funders to join the mission. Help us scale verifiable global aid and innovation.</p>
       <p><strong>Contact:</strong></p>
-      <a class="email-button" href="mailto:proofofimpactprotocol@gmail.com">Email Us</a>
-      <a class="button" href="https://github.com/poiarchitect/Proof-of-impact" target="_blank">View on GitHub</a>
+      <a class="email-button" href="mailto:proofofimpactprotocol@gmail.com">Email Us</a><br>
+      <a class="email-button" href="https://github.com/poiarchitect/Proof-of-impact" target="_blank">View on GitHub</a>
     </div>
   </div>
 </body>
