--- a/presentation.html
+++ b/presentation.html
@@ -29,7 +29,7 @@
       font-weight: normal;
       margin-top: -10px;
     }
-    .button, .email-button {
+    .button {
       display: inline-block;
       margin: 10px;
       padding: 12px 24px;
@@ -37,7 +37,6 @@
       color: white;
       text-decoration: none;
       border-radius: 8px;
-      font-weight: bold;
     }
     .support-section {
       margin-top: 40px;
@@ -66,9 +65,25 @@
     }
     .light-box {
       background: #eaf2ff;
-      padding: 30px;
       border-radius: 12px;
+      padding: 30px;
       margin-top: 30px;
+    }
+    .link-box a {
+      display: block;
+      color: #1a73e8;
+      font-weight: bold;
+      text-decoration: underline;
+      margin: 8px 0;
+    }
+    .contact-button {
+      display: inline-block;
+      padding: 12px 24px;
+      margin: 10px auto;
+      background: #1a73e8;
+      color: white;
+      text-decoration: none;
+      border-radius: 8px;
     }
   </style>
 </head>
@@ -89,20 +104,22 @@
     </div>
 
     <div class="light-box">
-      <h2>Pitch-Ready<br>Demo Links</h2>
-      <a class="button" href="stake.html">Stake Simulation</a>
-      <a class="button" href="yield.html">Treasury Yield Tool</a>
-      <a class="button" href="grow.html">$GROW Balance Page</a>
-      <a class="button" href="proof-001.html">Bounty Proof Example</a>
-      <a class="button" href="https://docs.google.com/document/d/11KxHDERELrsdWhGTLcF7VTn0JAna-wwrc2I3F40DKiY" target="_blank">Read Full Whitepaper</a>
+      <h2>Pitch-Ready Demo Links</h2>
+      <div class="link-box">
+        <a href="stake.html">Stake Simulation</a>
+        <a href="yield.html">Treasury Yield Tool</a>
+        <a href="grow.html">$GROW Balance Page</a>
+        <a href="proof-003.html">Bounty Proof Example</a>
+        <a href="https://docs.google.com/document/d/11KxHDERELrsdWhGTLcF7VTn0JAna-wwrc2I3F40DKiY">Read Full Whitepaper</a>
+      </div>
     </div>
 
     <div class="light-box">
       <h2>Partner With Us</h2>
       <p>We invite NGOs, DAOs, and funders to join the mission. Help us scale verifiable global aid and innovation.</p>
-      <p><strong>Contact:</strong></p>
-      <a class="email-button" href="mailto:proofofimpactprotocol@gmail.com">Email Us</a><br>
-      <a class="email-button" href="https://github.com/poiarchitect/Proof-of-impact" target="_blank">View on GitHub</a>
+      <strong>Contact:</strong><br />
+      <a class="contact-button" href="mailto:proofofimpactprotocol@gmail.com">Email Us</a>
+      <a class="contact-button" href="https://github.com/poiarchitect/Proof-of-impact" target="_blank">View on GitHub</a>
     </div>
   </div>
 </body>
