--- a/presentation.html
+++ b/presentation.html
@@ -29,7 +29,7 @@
       font-weight: normal;
       margin-top: -10px;
     }
-    .button {
+    .button, .contact-button {
       display: inline-block;
       margin: 10px;
       padding: 12px 24px;
@@ -37,6 +37,7 @@
       color: white;
       text-decoration: none;
       border-radius: 8px;
+      font-weight: bold;
     }
     .support-section {
       margin-top: 40px;
@@ -76,15 +77,6 @@
       text-decoration: underline;
       margin: 8px 0;
     }
-    .contact-button {
-      display: inline-block;
-      padding: 12px 24px;
-      margin: 10px auto;
-      background: #1a73e8;
-      color: white;
-      text-decoration: none;
-      border-radius: 8px;
-    }
   </style>
 </head>
 <body>
@@ -109,7 +101,6 @@
         <a href="stake.html">Stake Simulation</a>
         <a href="yield.html">Treasury Yield Tool</a>
         <a href="grow.html">$GROW Balance Page</a>
-        <a href="proof-003.html">Bounty Proof Example</a>
         <a href="https://docs.google.com/document/d/11KxHDERELrsdWhGTLcF7VTn0JAna-wwrc2I3F40DKiY">Read Full Whitepaper</a>
       </div>
     </div>
