--- a/presentation.html
+++ b/presentation.html
@@ -29,7 +29,7 @@
       font-weight: normal;
       margin-top: -10px;
     }
-    .button, .contact-button {
+    .button {
       display: inline-block;
       margin: 10px;
       padding: 12px 24px;
@@ -37,7 +37,6 @@
       color: white;
       text-decoration: none;
       border-radius: 8px;
-      font-weight: bold;
     }
     .support-section {
       margin-top: 40px;
@@ -65,17 +64,20 @@
       border-radius: 8px;
     }
     .light-box {
-      background: #eaf2ff;
-      border-radius: 12px;
+      background: #eaf3ff;
       padding: 30px;
-      margin-top: 30px;
+      border-radius: 12px;
+      margin-top: 40px;
     }
-    .link-box a {
-      display: block;
-      color: #1a73e8;
+    .contact-button {
+      display: inline-block;
+      margin: 10px;
+      padding: 12px 24px;
+      background: #0073e6;
+      color: white;
       font-weight: bold;
-      text-decoration: underline;
-      margin: 8px 0;
+      text-decoration: none;
+      border-radius: 8px;
     }
   </style>
 </head>
@@ -97,18 +99,17 @@
 
     <div class="light-box">
       <h2>Pitch-Ready Demo Links</h2>
-      <div class="link-box">
-        <a href="stake.html">Stake Simulation</a>
-        <a href="yield.html">Treasury Yield Tool</a>
-        <a href="grow.html">$GROW Balance Page</a>
-        <a href="https://docs.google.com/document/d/11KxHDERELrsdWhGTLcF7VTn0JAna-wwrc2I3F40DKiY">Read Full Whitepaper</a>
-      </div>
+      <a class="button" href="stake.html">Stake Simulation</a>
+      <a class="button" href="yield.html">Treasury Yield Tool</a>
+      <a class="button" href="grow.html">$GROW Balance Page</a>
+      <a class="button" href="ai-logic.html">AI Logic Simulation</a>
+      <a class="button" href="https://docs.google.com/document/d/11KxHDERELrsdWhGTLcF7VTn0JAna-wwrc2I3F40DKiY">Read Full Whitepaper</a>
     </div>
 
     <div class="light-box">
       <h2>Partner With Us</h2>
       <p>We invite NGOs, DAOs, and funders to join the mission. Help us scale verifiable global aid and innovation.</p>
-      <strong>Contact:</strong><br />
+      <p><strong>Contact:</strong></p>
       <a class="contact-button" href="mailto:proofofimpactprotocol@gmail.com">Email Us</a>
       <a class="contact-button" href="https://github.com/poiarchitect/Proof-of-impact" target="_blank">View on GitHub</a>
     </div>
