--- a/presentation.html
+++ b/presentation.html
@@ -38,6 +38,10 @@
       text-decoration: none;
       border-radius: 8px;
     }
+    .banner {
+      margin: 20px auto;
+      max-width: 100%;
+    }
     .support-section {
       margin-top: 40px;
       padding-top: 30px;
@@ -63,22 +67,6 @@
       text-decoration: none;
       border-radius: 8px;
     }
-    .light-box {
-      background: #eaf3ff;
-      padding: 30px;
-      border-radius: 12px;
-      margin-top: 40px;
-    }
-    .contact-button {
-      display: inline-block;
-      margin: 10px;
-      padding: 12px 24px;
-      background: #0073e6;
-      color: white;
-      font-weight: bold;
-      text-decoration: none;
-      border-radius: 8px;
-    }
   </style>
 </head>
 <body>
@@ -97,22 +85,17 @@
       <a class="follow-button" href="https://x.com/proofofpoip" target="_blank">Follow PoIP on Twitter</a>
     </div>
 
-    <div class="light-box">
-      <h2>Pitch-Ready Demo Links</h2>
-      <a class="button" href="stake.html">Stake Simulation</a>
-      <a class="button" href="yield.html">Treasury Yield Tool</a>
-      <a class="button" href="grow.html">$GROW Balance Page</a>
-      <a class="button" href="ai-logic.html">AI Logic Simulation</a>
-      <a class="button" href="https://docs.google.com/document/d/11KxHDERELrsdWhGTLcF7VTn0JAna-wwrc2I3F40DKiY">Read Full Whitepaper</a>
-    </div>
+    <h2>Explore the Simulation</h2>
+    <a class="button" href="index.html">PoIP Homepage</a>
+    <a class="button" href="stake.html">Stake Simulation</a>
+    <a class="button" href="yield.html">Treasury Growth</a>
+    <a class="button" href="grow.html">$GROW Balance</a>
+    <a class="button" href="treasury-power.html">Treasury Simulator</a>
+    <a class="button" href="https://docs.google.com/document/d/11KxHDERELrsdWhGTLcF7VTn0JAna-wwrc2I3F40DKiY" target="_blank">Read Whitepaper</a>
 
-    <div class="light-box">
-      <h2>Partner With Us</h2>
-      <p>We invite NGOs, DAOs, and funders to join the mission. Help us scale verifiable global aid and innovation.</p>
-      <p><strong>Contact:</strong></p>
-      <a class="contact-button" href="mailto:proofofimpactprotocol@gmail.com">Email Us</a>
-      <a class="contact-button" href="https://github.com/poiarchitect/Proof-of-impact" target="_blank">View on GitHub</a>
-    </div>
+    <h2>Partner With Us</h2>
+    <p>We invite NGOs, DAOs, and funders to join the mission. Help us scale verifiable global aid and innovation.</p>
+    <a class="button" href="mailto:proofofimpactprotocol@gmail.com">Contact for Collaboration</a>
   </div>
 </body>
 </html>
