--- a/presentation.html
+++ b/presentation.html
@@ -38,10 +38,6 @@
       text-decoration: none;
       border-radius: 8px;
     }
-    .banner {
-      margin: 20px auto;
-      max-width: 100%;
-    }
     .support-section {
       margin-top: 40px;
       padding-top: 30px;
@@ -85,17 +81,18 @@
       <a class="follow-button" href="https://x.com/proofofpoip" target="_blank">Follow PoIP on Twitter</a>
     </div>
 
-    <h2>Explore the Simulation</h2>
+    <h2 style="margin-top: 50px;">Explore the Simulation</h2>
     <a class="button" href="index.html">PoIP Homepage</a>
     <a class="button" href="stake.html">Stake Simulation</a>
     <a class="button" href="yield.html">Treasury Growth</a>
     <a class="button" href="grow.html">$GROW Balance</a>
-    <a class="button" href="treasury-power.html">Treasury Simulator</a>
-    <a class="button" href="https://docs.google.com/document/d/11KxHDERELrsdWhGTLcF7VTn0JAna-wwrc2I3F40DKiY" target="_blank">Read Whitepaper</a>
+    <a class="button" href="ai-logic.html">AI Logic Simulation</a>
+    <a class="button" href="https://docs.google.com/document/d/11KxHDERELrsdWhGTLcF7VTn0JAna-wwrc2I3F40DKiY">Read Whitepaper</a>
 
-    <h2>Partner With Us</h2>
+    <h2 style="margin-top: 50px;">Partner With Us</h2>
     <p>We invite NGOs, DAOs, and funders to join the mission. Help us scale verifiable global aid and innovation.</p>
-    <a class="button" href="mailto:proofofimpactprotocol@gmail.com">Contact for Collaboration</a>
+    <a class="button" href="mailto:proofofimpactprotocol@gmail.com">Email Us</a>
+    <a class="button" href="https://github.com/poiarchitect">View on GitHub</a>
   </div>
 </body>
 </html>
