--- a/presentation.html
+++ b/presentation.html
@@ -21,7 +21,7 @@
       padding: 30px;
       box-shadow: 0 0 20px rgba(0,0,0,0.1);
     }
-    h1 {
+    h1, h2 {
       color: #1a73e8;
     }
     h3 {
@@ -37,11 +37,6 @@
       color: white;
       text-decoration: none;
       border-radius: 8px;
-    }
-    .support-section {
-      margin-top: 40px;
-      padding-top: 30px;
-      border-top: 1px solid #ccc;
     }
     .support-button {
       display: inline-block;
@@ -63,6 +58,10 @@
       text-decoration: none;
       border-radius: 8px;
     }
+    .section {
+      margin-top: 40px;
+      text-align: left;
+    }
   </style>
 </head>
 <body>
@@ -71,28 +70,76 @@
     <h3><em>Powered by blockchain. Automated by AI. Built for humanity.</em></h3>
     <h3><em>A trustless system for funding real-world impact — transparently, verifiably, and at scale.</em></h3>
 
-    <div class="support-section">
-      <h2>Support PoIP on Giveth</h2>
-      <p>We are now live on Giveth! You can support the growth of the Proof of Impact Protocol by donating directly through our official campaign page.</p>
-      <a class="support-button" href="https://giveth.io/project/proof-of-impact-protocol" target="_blank">Donate via Giveth</a>
+    <div class="section">
+      <h2>Pitch Summary</h2>
+      <p><strong>Problem:</strong><br>
+      Billions in global aid are lost to inefficiencies, fraud, or bureaucracy. Donors lack transparency, and recipients struggle to access funds directly and verifiably.</p>
 
-      <h2 style="margin-top: 40px;">Follow the Mission</h2>
-      <p>Stay updated and help amplify the movement on X:</p>
-      <a class="follow-button" href="https://x.com/proofofpoip" target="_blank">Follow PoIP on Twitter</a>
+      <p><strong>Solution:</strong><br>
+      PoIP is a decentralized public-good protocol that turns crypto staking into verifiable real-world impact. Users stake tokens into a pooled treasury. The yield is used to fund AI-verified bounties (e.g. laptops for schools, clean water, medical supplies). Proof of delivery is posted publicly. Stakers earn symbolic $GROW tokens as reputation rewards.</p>
+
+      <p><strong>How It Works:</strong><br>
+      • Stake crypto → treasury grows<br>
+      • AI selects high-impact bounties<br>
+      • Yield funds the solution directly<br>
+      • On-chain proof confirms completion<br>
+      • Stakers receive symbolic $GROW tokens</p>
+
+      <p><strong>Why It’s Different:</strong><br>
+      • 100% transparent and auditable<br>
+      • AI-powered, DAO-governed coordination<br>
+      • No middlemen or speculation<br>
+      • Only verified bounties are funded<br>
+      • Built with sustainability and scale in mind</p>
+
+      <p><strong>Current Status:</strong><br>
+      • Fully functional testnet simulation live<br>
+      • Deployed $GROW token on Sepolia<br>
+      • Live staking + treasury growth demo<br>
+      • Whitepaper, NGO onboarding, and proof system in place<br>
+      • Presentation-ready and grant-ready</p>
+
+      <p><strong>Funding Request:</strong><br>
+      We are seeking £10,000–£25,000 in grant support to:<br>
+      • Launch the first real-world bounties<br>
+      • Build DAO infrastructure and mainnet contracts<br>
+      • Expand NGO onboarding and AI integration<br>
+      • Seed the treasury for live impact coordination</p>
+
+      <p><strong>Let’s Build a Transparent Future for Impact</strong><br>
+      <a href="mailto:proofofimpactprotocol@gmail.com">proofofimpactprotocol@gmail.com</a></p>
     </div>
 
-    <h2 style="margin-top: 50px;">Explore the Simulation</h2>
-    <a class="button" href="index.html">PoIP Homepage</a>
-    <a class="button" href="stake.html">Stake Simulation</a>
-    <a class="button" href="yield.html">Treasury Growth</a>
-    <a class="button" href="grow.html">$GROW Balance</a>
-    <a class="button" href="ai-logic.html">AI Logic Simulation</a>
-    <a class="button" href="https://docs.google.com/document/d/11KxHDERELrsdWhGTLcF7VTn0JAna-wwrc2I3F40DKiY">Read Whitepaper</a>
+    <div class="section">
+      <h2>Explore the Simulation</h2>
+      <a class="button" href="stake.html">Stake Simulation</a>
+      <a class="button" href="yield.html">Treasury Yield Tool</a>
+      <a class="button" href="grow.html">$GROW Balance Page</a>
+      <a class="button" href="ai-logic.html">AI Logic Demo</a>
+      <a class="button" href="treasury-power.html">Treasury Power Logic</a>
+      <a class="button" href="https://docs.google.com/document/d/11KxHDERELrsdWhGTLcF7VTn0JAna-wwrc2I3F40DKiY" target="_blank">Read Full Whitepaper</a>
+    </div>
 
-    <h2 style="margin-top: 50px;">Partner With Us</h2>
-    <p>We invite NGOs, DAOs, and funders to join the mission. Help us scale verifiable global aid and innovation.</p>
-    <a class="button" href="mailto:proofofimpactprotocol@gmail.com">Email Us</a>
-    <a class="button" href="https://github.com/poiarchitect">View on GitHub</a>
+    <div class="section">
+      <h2>Support PoIP on Giveth</h2>
+      <p>You can support the growth of the Proof of Impact Protocol by donating directly through our official Giveth page.</p>
+      <a class="support-button" href="https://giveth.io/project/proof-of-impact-protocol" target="_blank">Donate via Giveth</a>
+    </div>
+
+    <div class="section">
+      <h2>Follow the Mission</h2>
+      <p>Stay updated and help amplify the movement:</p>
+      <a class="follow-button" href="https://x.com/proofofpoip" target="_blank">Follow on Twitter</a>
+    </div>
+
+    <div class="section">
+      <h2>Partner With Us</h2>
+      <p>We invite NGOs, DAOs, and funders to join the mission. Help us scale verifiable global aid and innovation.</p>
+      <p><strong>Contact:</strong><br>
+        <a class="button" href="mailto:proofofimpactprotocol@gmail.com">Email Us</a><br>
+        <a class="button" href="https://github.com/poiarchitect" target="_blank">View on GitHub</a>
+      </p>
+    </div>
   </div>
 </body>
 </html>
